src/test/ui/duplicate/dupe-symbols-2.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-2.rs:15:5
   |
LL |     pub extern fn fail() {
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

